--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="last_name">Last Name</string>
     <string name="phone_number">Phone Number</string>
     <string name="unable_load_contact_list">Unable to load Contact List</string>
+    <string name="send_message">Send Message</string>
+    <string name="send">Send</string>
 </resources>
