--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="unable_load_contact_list">Unable to load Contact List</string>
     <string name="send_message">Send Message</string>
     <string name="send">Send</string>
+    <string name="otp">OTP:-</string>
 </resources>
